examples/valid/program30.c
int min(int a, int b) {
    if (a < b) {
        return a;
    }
    return b;
}

int main(void) {
    return min(15, 8);
}

