examples/invalid/program11.c
int main(void) {
    int 9abc;
    return 0;
}

